Corrected path to Euroweather

--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -235,7 +235,7 @@ datasources:
       city: Oslo
       email: david.melchior@met.no
       url: https://www.met.no/en
-    endpoint: http://euroweather.ipmdecisions.nibio.no
+    endpoint: http://euroweather.ipmdecisions.nibio.no/weather_data
     needs_data_control: false
     temporal:
       historic: #  
