--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -40,6 +40,43 @@ datasources:
        - 2001 # Precipitation (mm)
        - 4002 # Instantaneous wind speed at 2m
   - 
+    id: ie.gov.data
+    name: "Met Éireann Locationforecast"
+    description: 9-day forecasts for the Ireland. 
+    public_URL: "https://api.met.no/weatherapi/locationforecast/1.9/documentation"
+    organization: 
+      name: Met Éireann Open Data Unit
+      country: Ireland
+      address: Dept of Public Expenditure and Reform,7-9 Merrion Row
+      postal_code: "2"
+      city: Dublin
+      email: opendata@per.gov.ie
+      url: https://data.gov.ie/
+    endpoint: http://metwdb-openaccess.ichec.ie/metno-wdb2ts/locationforecast
+    needs_data_control: false
+    temporal:
+      historic: #  
+        start: null # Start == null => No measured/historic/observational data
+        end: null #null => Recent data available (continuously updated) UNLESS OF COURSE start == null
+      forecast: 9 # 0 = no forecast. All other positive integers indicate the number of days ahead
+    access_type: location
+    spatial: 
+      # Using country codes to get GeoJSON. Saves a lot of duplication.
+      # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+      # e.g.
+      # - NOR
+      # - SWE
+      countries:
+      - IRL
+      # "Sphere" simply means the whole globe (NOT part of GEOJson spec!)
+      geoJSON: null
+    parameters:
+      common:
+       - 1001 # Instantaneous temperature at 2m (Celcius)
+       - 3001 # Instantaneous RH at 2m (%)
+       - 2001 # Precipitation (mm)
+       - 4002 # Instantaneous wind speed at 2m
+  - 
     id: dk.dmi.pointweather
     name: "DMI Pointweather service"
     description: "Seasonal weather data and forecasts for Denmark. Grid based"
