--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -119,6 +119,49 @@ datasources:
        - 3101 
        - 4002
   - 
+    id: se.slu.lantmet
+    name: SLU Lantmet service
+    description: Seasonal weather data and forecasts for Sweden. Grid based
+    public_URL: https://www.slu.se/faltforsk
+    organization: 
+      name: SLU Fältforsk
+      country: Sweden
+      address: Institutionen för växtproduktionsekologi. Box 7043
+      postal_code: "750 07"
+      city: Uppsala
+      email: lantmet@slu.se
+      url: https://www.slu.se/faltforsk
+    endpoint: https://ipmdecisions.nibio.no/api/wx/rest/weatheradapter/lantmet/
+    authentication_type: NONE
+    needs_data_control: false
+    temporal:
+      historic: 
+        start: "2021-01-01" # Start == null => No measured/historic/observational data
+        end: null #null => Recent data available (continuously updated) UNLESS OF COURSE start == null
+      forecast: 1 # 0 = no forecast. All other positive integers indicate the number of days ahead
+    access_type: location
+    spatial: 
+      # Using country codes to get GeoJSON. Saves a lot of duplication.
+      # ISO-3166-1 Three-letter country codes https://en.wikipedia.org/wiki/ISO_3166-1#Current_codes
+      # e.g.
+      # - DNK
+      # - SWE
+      countries:
+        - SWE
+      # "Sphere" simply means the whole globe (NOT part of GEOJson spec!)
+      geoJSON: null
+    parameters:
+      common:
+       - 1002
+       - 1003
+       - 1004
+       - 2001
+       - 3002
+       - 3003
+       - 3004
+       - 4003
+       - 5001
+  - 
     id: net.ipmdecisions.dwd.forecast.germany
     name: "Deutsche Wetterdienst location forecast by IPM Decisions"
     description: "27 hour weather forecasts for Germany and surrounding areas. 2.5 km resolution. Pulls data from DWD's Open Data server (https://www.dwd.de/EN/ourservices/opendata/opendata.html). Made available by a custom adapter created by Met Norway and NIBIO."
