Updated to use {CURRENT_YEAR} instead of XXXX

--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -59,12 +59,12 @@ models:
     weather_parameters:
     - parameter_code: 1002 # = Mean air temp at 2m
       interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeStart ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.timeStart ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeEnd ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.timeEnd ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/PSILARTEMP/run/ipmd
@@ -197,12 +197,12 @@ models:
       interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
     - parameter_code: 1112 # Mean soil temp at 10cm depth
       interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeStart ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.timeStart ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeEnd ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.timeEnd ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/DELIARADIC/run/ipmd
@@ -354,12 +354,12 @@ models:
       interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
     - parameter_code: 1112 # Mean soil temp at 10cm depth
       interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeStart ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.timeStart ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeEnd ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.timeEnd ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/MAMESTRABR/run/ipmd
@@ -753,12 +753,12 @@ models:
       interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
     - parameter_code: 3101 # Leaf wetness duration. Measured in minutes with wetness per period 
       interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeStart ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.timeStart ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeEnd ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.timeEnd ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/NAERSTADMO/run/ipmd
@@ -862,12 +862,12 @@ models:
       interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
     - parameter_code: 3101 # Leaf wetness duration. Measured in minutes with wetness per period 
       interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeStart ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.timeStart ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeEnd ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.timeEnd ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/ALTERNARIA/run/ipmd
@@ -974,12 +974,12 @@ models:
       interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
     - parameter_code: 3002 # Mean relative humidity (%)
       interval: 3600
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeStart ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.timeStart ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.timeEnd ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.timeEnd ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/NEGPROGMOD/run/ipmd
@@ -1092,12 +1092,12 @@ models:
       interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
     - parameter_code: 3002 # Mean relative humidity (%)
       interval: 3600
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.startDateGrowth ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: configParameters.startDateGrowth ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: configParameters.endDateCalculation ## Could be path.to.property OR e.g. XXXX-12-31
+      value: configParameters.endDateCalculation ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
     field_observation:
       species:
       - SEPTAP # EPPO Code for the disease
@@ -1224,12 +1224,12 @@ models:
       interval: 3600 
     - parameter_code: 3002 # Mean RH at 2m
       interval: 3600 
-    weather_data_period_start: # DEFAULT is FIXED_DATE=XXXX-01-01
+    weather_data_period_start: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-01-01
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: XXXX-04-01 ## Could be path.to.property OR e.g. XXXX-01-01
-    weather_data_period_end: # DEFAULT is FIXED_DATE=XXXX-12-31
+      value: {CURRENT_YEAR}-04-01 ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
+    weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: INPUT_SCHEMA_PROPERTY ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: XXXX-09-01 ## Could be path.to.property OR e.g. XXXX-12-31
+      value: {CURRENT_YEAR}-09-01 ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/run/ipmd
